# VulnRadar

./: README.md  app.py  etl.py  notify.py  pyproject.toml  requirements-dev.txt  requirements.txt  watchlist.json  watchlist.yaml
.github/workflows/: ci.yml  notify.yml  update.yml
data/: radar_report.md
docs/: README.md  automation.md  configuration.md  contributing.md  dashboard.md  data-schema.md  data-sources.md  etl.md  faq.md  getting-started.md  operations.md  security.md  troubleshooting.md
scripts/: reset_demo.sh  update_readme_metrics.py
tests/: conftest.py  test_etl.py  test_notify.py
vulnradar/: cli.py
